# benfords-law-app

./: .coveragerc  .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  census_2009.txt  pyproject.toml  pytest.ini
data/analyses/: census_2009.txt.json
src/: handlers.py
templates/: analysis.html  base.html  column_selector.html  index.html
tests/: conftest.py
tests/integration/: test_app.py
tests/unit/: test_handlers.py
tests/unit/data/: empty-fields.csv  missing-columns.csv  validcsv.csv
