[tool.poetry]
name = "benfords-law-service"
version = "0.1.0"
description = ""
authors = ["Blake Stovall <blake@bstovall.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-ulid = "^1.1.0"
pendulum = "^2.1.2"
flask = "^2.3.2"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
